organizando las imagenes

--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@
 body {
     background-color: white;
     height: 950px;
-    background-image: url('./laptop.jpg');
+    background-image: url('./imagenes/laptop.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
